Fix layout on mobile (margins, small image size)

--- a/src/stylesheets/_settings.scss
+++ b/src/stylesheets/_settings.scss
@@ -93,7 +93,7 @@ $breakpoint-classes: (small medium large);
 $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: (
-  small: 1rem,
+  small: 2rem,
   medium: 1rem,
 );
 $grid-column-align-edge: true;
